--- a/main.html
+++ b/main.html
@@ -6,16 +6,16 @@
 </head>
 
 <body>
-    <h1 id="verification_heading">OTP Verification</h1>
+    <h1 id="verification_heading">Verify Your Account</h1>
     <p id="verification_subtext">Enter the 6-digit OTP sent to your mobile number</p>
     
     <div class="code-container">
-        <input type="text" class="code" maxlength="1">
-        <input type="text" class="code" maxlength="1">
-        <input type="text" class="code" maxlength="1">
-        <input type="text" class="code" maxlength="1">
-        <input type="text" class="code" maxlength="1">
-        <input type="text" class="code" maxlength="1">
+        <input type="text" id="code-1" class="code" maxlength="1">
+        <input type="text" id="code-2" class="code" maxlength="1">
+        <input type="text" id="code-3" class="code" maxlength="1">
+        <input type="text" id="code-4" class="code" maxlength="1">
+        <input type="text" id="code-5" class="code" maxlength="1">
+        <input type="text" id="code-6" class="code" maxlength="1">
     </div>
     
     <script type="text/javascript" src="script.js"></script>
