--- a/main.html
+++ b/main.html
@@ -1,24 +1,38 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>OTP Verification UI</title>
+    <meta charset="UTF-8" />
+  </head>
 
-<head>
-    <link rel="stylesheet" href="styles.css">
-</head>
+  <body>
+    <div class="container">
+      <!-- Heading -->
+      <h2 id="verification_heading">Verify Your Account</h2>
 
-<body>
-    <h1 id="verification_heading">Verify Your Account</h1>
-    <p id="verification_subtext">Enter the 6-digit OTP sent to your mobile number</p>
-    
-    <div class="code-container">
-        <input type="text" id="code-1" class="code" maxlength="1">
-        <input type="text" id="code-2" class="code" maxlength="1">
-        <input type="text" id="code-3" class="code" maxlength="1">
-        <input type="text" id="code-4" class="code" maxlength="1">
-        <input type="text" id="code-5" class="code" maxlength="1">
-        <input type="text" id="code-6" class="code" maxlength="1">
+      <!-- SubHeading -->
+      <p id="verification_subtext">
+        We emailed you the six digit code to acciojobemail.com. Enter the code
+        below to confirm your email address.
+      </p>
+
+      <!-- 6 Input Fields for Digits i.e. 1 digit each -->
+      <div class="code-container">
+        <input type="text" class="code" maxlength="1" />
+        <input type="text" class="code" maxlength="1" />
+        <input type="text" class="code" maxlength="1" />
+        <input type="text" class="code" maxlength="1" />
+        <input type="text" class="code" maxlength="1" />
+        <input type="text" class="code" maxlength="1" />
+      </div>
+      <!-- End Note -->
+
+      <p id="note">
+        This is design only. We didn't actually send you an email as we don't
+        have your email, right?
+      </p>
     </div>
-    
-    <script type="text/javascript" src="script.js"></script>
-</body>
 
+    <script src="./index.js" type="module"></script>
+  </body>
 </html>
