--- a/main.html
+++ b/main.html
@@ -17,14 +17,14 @@
       </p>
 
       <!-- 6 Input Fields for Digits i.e. 1 digit each -->
-      <div class="code-container">
-        <input type="text" class="code" maxlength="1" />
-        <input type="text" class="code" maxlength="1" />
-        <input type="text" class="code" maxlength="1" />
-        <input type="text" class="code" maxlength="1" />
-        <input type="text" class="code" maxlength="1" />
-        <input type="text" class="code" maxlength="1" />
-      </div>
+     <div class="code-container">
+  <input type="text" id="code-1" class="code" maxlength="1" />
+  <input type="text" id="code-2" class="code" maxlength="1" />
+  <input type="text" id="code-3" class="code" maxlength="1" />
+  <input type="text" id="code-4" class="code" maxlength="1" />
+  <input type="text" id="code-5" class="code" maxlength="1" />
+  <input type="text" id="code-6" class="code" maxlength="1" />
+</div>
       <!-- End Note -->
 
       <p id="note">
